# docs-indexer-mcp

./: README.md  pyproject.toml
src/docs_indexer_mcp/: __init__.py  cli.py  config.py  crawler.py  document_manager.py  mcp.py  models.py
