[project]
name = "docs-indexer-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html2text>=2025.4.15",
    "mcp[cli]>=1.9.3",
    "playwright>=1.52.0",
    "requests>=2.32.4",
]

[project.scripts]
docs-indexer-mcp = "docs_indexer_mcp.mcp:main"
cli = "docs_indexer_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
