[project]
name = "docs-indexer-mcp"
version = "0.1.0"
description = "MCP server to index custom documents and expose them to AI as tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html2text>=2025.4.15",
    "mcp[cli]>=1.9.3",
    "requests>=2.32.4",
]

[project.scripts]
server = "docs_indexer_mcp.mcp:main"
cli = "docs_indexer_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

